# agentception

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
data/: agentception.db
data/seeds/: roles.yaml
docs/: architecture.mmd
server/: README.md  app.py  schemas.py
server/agents/: enhanced_research_agent.py  job_search.py  rag_companies.py  writer_outreach.py
server/memory/: sql_store.py  state_store.py
server/rag/: exa_company_discovery.py  match.py  roles.py
server/tools/: exa_search.py  geocode.py  resume_store.py
ui/: README.md  package-lock.json  package.json  tailwind.config.js
ui/.next/: trace
ui/.next/server/: _error.js
ui/.next/server/pages/: _app.js  _error.js  index.js
ui/.next/server/vendor-chunks/: @swc.js  next.js
ui/.next/static/chunks/: _error.js  webpack.js
ui/.next/static/webpack/: ddd9c244f9e6907c.webpack.hot-update.json  webpack.08add8ace1b54064.hot-update.js  webpack.1038c8d8eda28cdb.hot-update.js  webpack.1e068fa3c549c59d.hot-update.js  webpack.280f6dbbff023120.hot-update.js  webpack.3dd6c7cce7e0156c.hot-update.js  webpack.4eeadd728a278600.hot-update.js  webpack.545a67f5e47fa476.hot-update.js  webpack.59b9c1782689334a.hot-update.js  webpack.6107153ed8ffa169.hot-update.js  webpack.6c3c1d6c0c40c7ad.hot-update.js  webpack.6f8a42a238177e8c.hot-update.js  (+13 more)
ui/components/: AppShell.tsx  LiquidBackground.tsx  TopProgress.tsx
ui/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx
ui/pages/: index.tsx
ui/styles/: globals.css
ui/utils/: cn.ts
(+31 files in other folders)
