[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentception"
version = "0.1.1"
description = "Multi-agent orchestrator (Wow + Real modes) with RAG"
readme = "README.md"
authors = [{ name = "Arun Kumar Chukkala" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "lancedb>=0.14.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
